3.1.0: Fix tabs wrap

--- a/synthwave-lowspec.css
+++ b/synthwave-lowspec.css
@@ -422,7 +422,6 @@ canvas {
 .monaco-editor .monaco-hover {
 	background-color: #262335;
 	display: block !important;
-	padding: 20px;
 	opacity: 1;
 }
 
@@ -473,6 +472,8 @@ canvas {
 
 .monaco-workbench .part.editor > .content .editor-group-container > .title .tabs-container {
 	margin-bottom: 4px !important;
+	display: flex !important;
+	flex-wrap: wrap !important;
 }
 
 .monaco-workbench .part.editor > .content .editor-group-container:not(.active) > .title > .tabs-and-actions-container.wrapping .tabs-container > .tab,
