--- a/synthwave.css
+++ b/synthwave.css
@@ -425,7 +425,6 @@ canvas {
 .monaco-editor .monaco-hover {
 	background-color: #262335;
 	display: block !important;
-	padding: 20px;
 	opacity: 1;
 	animation: tooltippulse 2s infinite linear;
 }
@@ -484,6 +483,8 @@ canvas {
 
 .monaco-workbench .part.editor > .content .editor-group-container > .title .tabs-container {
 	margin-bottom: 4px !important;
+	display: flex !important;
+	flex-wrap: wrap !important;
 }
 
 .monaco-workbench .part.editor > .content .editor-group-container:not(.active) > .title > .tabs-and-actions-container.wrapping .tabs-container > .tab,
